--- a/Lab09/krystian.html
+++ b/Lab09/krystian.html
@@ -1,11 +1,11 @@
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <script src="script.js" type="text/javascript">      
+        </script>
+    </head>
 
-    <script type="text/javascript">
-    
-    </script>
     <body onload="startGL()" onkeydown="handlekeydown(event)">
-    <canvas id="canvas3D" width="1600" height="900" style="border: solid black 1px"></canvas>
-    
-    </body></html>
+        <canvas id="canvas3D" width="1600" height="900" style="border: solid black 1px"></canvas>
+    </body>
+</html>
